--- a/.cproject
+++ b/.cproject
@@ -59,6 +59,8 @@
                                 								
                                 <option id="gnu.cpp.compiler.option.dialect.std.503745049" name="Language standard" superClass="gnu.cpp.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.cpp.compiler.dialect.default" valueType="enumerated"/>
                                 								
+                                <option id="gnu.cpp.compiler.option.pthread.735731314" name="Support for pthread (-pthread)" superClass="gnu.cpp.compiler.option.pthread" useByScannerDiscovery="false" value="true" valueType="boolean"/>
+                                								
                                 <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.141009221" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
                                 							
                             </tool>
@@ -81,17 +83,19 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.link.option.libs.194030595" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" useByScannerDiscovery="false" valueType="libs">
                                     									
+                                    <listOptionValue builtIn="false" value="glut"/>
+                                    									
                                     <listOptionValue builtIn="false" value="GL"/>
                                     									
                                     <listOptionValue builtIn="false" value="GLU"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="glut"/>
                                     									
                                     <listOptionValue builtIn="false" value="m"/>
                                     								
                                 </option>
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="true" id="gnu.cpp.link.option.paths.552780551" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" useByScannerDiscovery="false" valueType="libPaths"/>
+                                								
+                                <option id="gnu.cpp.link.option.pthread.58021481" name="Support for pthread (-pthread)" superClass="gnu.cpp.link.option.pthread" useByScannerDiscovery="false" value="true" valueType="boolean"/>
                                 								
                                 <inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1599080608" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
                                     									
